Avoid having an element that covers the pinch zoom

--- a/src/components/compress/style.scss
+++ b/src/components/compress/style.scss
@@ -1,19 +1,15 @@
 .compress {
-  height: 100%;
-}
-
-.option-pair {
-  display: flex;
   width: 100%;
   height: 100%;
+  contain: strict;
+  display: grid;
 
   &.horizontal {
-    justify-content: space-between;
-    align-items: flex-end;
+    grid-template-columns: 1fr auto;
+    align-items: end;
   }
 
   &.vertical {
-    flex-direction: column;
-    justify-content: flex-end;
+    // TODO
   }
 }
